@@ -13,6 +13,7 @@ import org.slf4j.LoggerFactory;
 import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
+import java.nio.file.Paths;
 import java.util.ArrayList;
 import java.util.HashMap;
 import java.util.List;
@@ -31,6 +32,9 @@ public class DatabaseSkillRepository implements AgentSkillRepository {
 
     private final SkillMapper skillMapper;
     private final String userId;
+    /** skill 文件磁盘根目录(${skill.file.base-dir}),与 SkillFileService 一致。
+     *  DB 中 storage_path 存的是相对路径 {userId}/{filename},读盘时须拼本字段解析成绝对路径。 */
+    private final String baseDir;
     private boolean writeable = true;
 
     /**
@@ -38,10 +42,13 @@ public class DatabaseSkillRepository implements AgentSkillRepository {
      *
      * @param skillMapper MyBatis Mapper，操作 skill_manage 表
      * @param userId      当前请求的用户 ID（对应 skill_manage.owner_user_id）
+     * @param baseDir     skill 文件磁盘根目录(${skill.file.base-dir})，与 SkillFileService 一致；
+     *                    用于把 DB 中的相对 storage_path 解析成绝对路径
      */
-    public DatabaseSkillRepository(SkillMapper skillMapper, String userId) {
+    public DatabaseSkillRepository(SkillMapper skillMapper, String userId, String baseDir) {
         this.skillMapper = skillMapper;
         this.userId = userId;
+        this.baseDir = baseDir;
     }
 
     @Override
@@ -50,7 +57,11 @@ public class DatabaseSkillRepository implements AgentSkillRepository {
             if (userId == null) {
                 return null;
             }
+            // 优先按 owner 查(快速路径),未命中再按可访问范围查(含维度发布)
             Skill skill = skillMapper.selectByRetrievalNameAndOwner(name, userId);
+            if (skill == null) {
+                skill = skillMapper.selectByRetrievalNameAccessibleByUser(name, userId);
+            }
             if (skill == null) {
                 return null;
             }
@@ -222,10 +233,12 @@ public class DatabaseSkillRepository implements AgentSkillRepository {
 
     /**
      * 加载 Skill 引用的附件文件,装入 AgentSkill.resources,使 LLM 可通过
-     * {@code load_skill_through_path(skillId, path=<filename>)} 读取脚本内容。
+     * {@code load_skill_through_path(name=<skillId>, path=<绝对路径>)} 读取脚本内容。
      *
      * <p>从 skill_file_reference 取引用列表,再按 (userId, filename) 查 skill_file 拿
-     * storage_path,从磁盘读文本内容。.py / .sql 均为文本;读失败跳过该文件不影响 skill 加载。
+     * storage_path,拼 {@code baseDir} 解析成绝对路径后读文本内容。resources 的 key 即该绝对路径
+     * (正斜杠归一化)--SkillLoadTool.loadOne 按 key 精确匹配,故 LLM 须用同一绝对路径加载。
+     * .py / .sql 均为文本;读失败跳过该文件不影响 skill 加载。
      */
     private Map<String, String> loadFileResources(Long skillId) {
         if (skillId == null || userId == null) {
@@ -247,7 +260,15 @@ public class DatabaseSkillRepository implements AgentSkillRepository {
                     continue;
                 }
                 try {
-                    resources.put(filename, Files.readString(Path.of(file.getStoragePath())));
+                    // DB 存的是相对路径 {userId}/{filename},须拼 baseDir 解析成绝对路径
+                    // (与 SkillFileService.resolveStoragePath 一致);Paths.get 在第二参为绝对路径时
+                    // 忽略 baseDir,故历史绝对路径记录同样兼容。
+                    Path path = Paths.get(baseDir, file.getStoragePath());
+                    // key 用绝对路径(统一成正斜杠,避免 Windows 反斜杠在 JSON 工具参数里转义出错)。
+                    // SkillLoadTool.loadOne 按 key 精确匹配(无 sanitize/normalize),故 LLM 须经
+                    // load_skill_through_path(path=<此绝对路径>) 读取;找不到时工具会回显 Available resources 列表。
+                    String fullPath = path.toAbsolutePath().toString().replace('\\', '/');
+                    resources.put(fullPath, Files.readString(path));
                 } catch (IOException e) {
                     log.warn("DatabaseSkillRepository: 读取文件 '{}' 失败 (skill={}): {}",
                             filename, skillId, e.getMessage());
